# logitech-g600-rust

./: Cargo.toml  Makefile  README.md
src/: config.rs  config.yaml  main.rs
